--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1083,6 +1083,18 @@ section.pages a {
     border-radius: 50%;
 }
 
+span.is-invalid {
+    color: red;
+    font-size: 1.4em;
+    display: block;
+}
+
+span.is-valid {
+    color: green;
+    font-size: 1.4em;
+    display: block;
+}
+
 /* MEDIA QUERIES */
 
 @media (min-width: 768px) { /*TABLET*/
