--- a/src/views/editar.ejs
+++ b/src/views/editar.ejs
@@ -11,7 +11,7 @@
             <div class="contain-form">
 
                     
-                <form class="form-create" action="/productos/detalles/editar/<%= producto.id %>?_method=put" method="POST" enctype="multipart/form-data">
+                <form id="formulario" class="form-create" action="/productos/detalles/editar/<%= producto.id %>?_method=put" method="POST" enctype="multipart/form-data">
                     <div class="form-tittle">
                         <h2 class="tittle">Editar Producto </h2>
                     </div>
@@ -20,13 +20,15 @@
                     <div class="form-div">
                         <label class="createLabel" for="nombre">Nombre del producto </label>
                         <input type="text" name="name" id="nombre" value="<%= producto.name %>" required>
+                        <span id="nombreFeedback"></span>
                         <% if (locals.errors && errors.name) { %>
                             <p style="color: red;"><%= errors.name.msg %></p>
                         <% } %>
                     </div>
                     <div class="form-div" id="descripcion">
                         <label class="createLabel" for="descripcion" id="descripcion">Descripcion </label>
-                        <textarea style="resize: none;" name="description" id="" cols="20" rows="5" required><%= producto.description %></textarea>
+                        <textarea style="resize: none;" name="description" id="description" cols="20" rows="5" required><%= producto.description %></textarea>
+                        <span id="descriptionFeedback"></span>
                         <% if (locals.errors && errors.description) { %>
                             <p style="color: red;"><%= errors.description.msg %></p>
                         <% } %>
@@ -41,6 +43,7 @@
                     <div class="form-div">
                         <label class="createLabel" for="">Precio </label>
                         <input type="number"  name="price" id="precio" value="<%= parseInt(producto.price) %>" required>
+                        <span id="precioFeedback"></span>
                         <% if (locals.errors && errors.price) { %>
                             <p style="color: red;"><%= errors.price.msg %></p>
                         <% } %>
@@ -50,9 +53,9 @@
                         <div class="off">
                             <% if (producto.enOferta == 1) { %>
                                 <input  class="check" type="checkbox" name="enOferta" id="check" checked value=1>
-                                <% } else { %>
-                                    <input class="check" type="checkbox" name="enOferta" id="check" value=1>
-                                <% } %> 
+                            <% } else { %>
+                                <input class="check" type="checkbox" name="enOferta" id="check" value=1>
+                            <% } %> 
                             <label class="lbl" for="check"></label>
                             <% if (locals.errors && errors.discount) { %>
                                 <p style="color: red;"><%= errors.discount.msg %></p>
@@ -61,17 +64,19 @@
                     </div>
                     <div class="form-div" id="descuento" style="display: <%= producto.enOferta === 1 ? 'block' : 'none' %>;">
                         <label class="createLabel" class="createLabel">Descuento </label>
-                        <input type="number" name="discount" value="<%= parseInt(producto.discount) %>" min="1" max="100">
+                        <input id="descuentoInput" type="number" name="discount" value="<%= parseInt(producto.discount) %>" min="1" max="100">
+                        <span id="descuentoFeedback"></span>
                     </div>
 
                     <div class="form-div" id="categoria">
                         <label class="createLabel">Categoria</label>
-                        <select name="category" class="createLabel" required>
+                        <select id="categoriaInput" name="category" class="createLabel" required>
                             <option value="">Selecciona una categoria</option>
                             <option value=3 <%= producto.category_id == 3 ? 'selected' : "" %>>Mouse y teclados</option>
                             <option value=2 <%= producto.category_id == 2 ? 'selected' : "" %>>Audio y video</option>
                             <option value=1 <%= producto.category_id == 1 ? 'selected' : "" %>>Hardware</option>  
                         </select>
+                        <span id="categoriaFeedback"></span>
                         <% if (locals.errors && errors.category) { %>
                             <p style="color: red;"><%= errors.category.msg %></p>
                         <% } %>
@@ -85,6 +90,7 @@
                                 <option <%= producto.type_id == tipo.id ? 'selected' : "" %> value="<%= tipo.id %>"><%= tipo.name %> </option>
                             <% }) %>
                         </select>
+                        <span id="typeFeedback"></span>
                         <% if (locals.errors && errors.type) { %>
                             <p style="color: red;"><%= errors.category.msg %></p>
                         <% } %>
@@ -98,6 +104,7 @@
                                 <option <%= producto.brand_id == marca.id ? 'selected' : "" %> value="<%= marca.id %>"><%= marca.name %> </option>
                             <% }) %>
                         </select>
+                        <span id="brandFeedback"></span>
                         <% if (locals.errors && errors.brand) { %>
                             <p style="color: red;"><%= errors.brand.msg %></p>
                         <% } %>
@@ -117,5 +124,6 @@
     <%- include("./partials/footer.ejs") %> 
     <script src="/js/burger.js"></script>
     <script src="/js/check.js"></script>
+    <script src="/js/products.js"></script>
 </body>
 </html>
