--- a/src/views/perfil.ejs
+++ b/src/views/perfil.ejs
@@ -37,6 +37,7 @@
                 <% } %>
                 <label for="profilePic" class="register-form">Imagen de perfil</label>
                 <input type="file" name="profilePic" id="profilePic" accept=".png, .jpg, .jpeg">
+                <span id="imagenFeedback"></span>
                 <% if (locals.errors && errors.profilePic) { %>
                     <span style="color: red;"><%= errors.profilePic.msg %></span>
                 <% } %>
